added the middlebury campus

--- a/campus-and-noodle.ipynb
+++ b/campus-and-noodle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,56 @@
     "for i in range(1,15):\n",
     "    url_i = url + str(i) + \"/\"\n",
     "    noodle_headlines += get_headlines(url_i) \n",
-    "    \n"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now let's use the campus sitemap to get all of its headlines. the noodle started\n",
+    "# in september of 2016, so let's start our scrape there.\n",
+    "\n",
+    "begin = 35088\n",
+    "url = 'https://middleburycampus.com/'\n",
+    "# the two sitemaps which include articles from our desired date range\n",
+    "categories = ['sports','news','local','opinion','arts-academics']\n",
+    "\n",
+    "def get_articles(maps):\n",
+    "    articles = []\n",
+    "    \n",
+    "    for m in maps:\n",
+    "        r = requests.get(url + m)\n",
+    "        soup = BeautifulSoup( r.content , 'html.parser')\n",
+    "        for e in soup.find_all(\"loc\"):\n",
+    "            # get the text and put it into a list\n",
+    "            \n",
+    "            articles.append(e.text[29:]) # exclude the articl\n",
+    "            \n",
+    "    return parse_articles(articles)\n",
+    "\n",
+    "    \n",
+    "def parse_articles(articles):\n",
+    "    # use the URL to extract the title of the article\n",
+    "    headlines = []\n",
+    "    \n",
+    "    for a in articles:\n",
+    "        t = a.split('/')\n",
+    "        if ( int(t[0]) > begin) and (t[1] in categories):\n",
+    "            headline = t[2].replace('-',' ')\n",
+    "            headlines.append(headline)\n",
+    "            \n",
+    "    return headlines\n",
+    "    \n",
+    "maps = ['wp-sitemap-posts-post-7.xml','wp-sitemap-posts-post-8.xml']\n",
+    "campus_headlines = get_articles(maps)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -66,50 +110,64 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>text</th>\n",
+       "      <th>label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>virtue field house track converted to runway s...</td>\n",
+       "      <td>weekend wins for womens soccer</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>op ed middlebury must rescind the krakens hono...</td>\n",
+       "      <td>town seeks public input on green spaces ahead ...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>students instagram story of sunset wins pulitz...</td>\n",
+       "      <td>untitled romantic comedy</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>unable to go down ski slope feb grads go down ...</td>\n",
+       "      <td>he was too good remembering former college emp...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>lizard animating trumps rotting body from with...</td>\n",
+       "      <td>re coronavirus in n y manhattan woman is first...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                text\n",
-       "0  virtue field house track converted to runway s...\n",
-       "1  op ed middlebury must rescind the krakens hono...\n",
-       "2  students instagram story of sunset wins pulitz...\n",
-       "3  unable to go down ski slope feb grads go down ...\n",
-       "4  lizard animating trumps rotting body from with..."
+       "                                                text  label\n",
+       "0                     weekend wins for womens soccer      0\n",
+       "1  town seeks public input on green spaces ahead ...      0\n",
+       "2                           untitled romantic comedy      0\n",
+       "3  he was too good remembering former college emp...      0\n",
+       "4  re coronavirus in n y manhattan woman is first...      0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# save it as a dataframe\n",
-    "df = pd.DataFrame({'text':noodle_headlines})\n",
+    "df1 = pd.DataFrame({'text':noodle_headlines})\n",
+    "df1['label'] = 1\n",
+    "df2 = pd.DataFrame({'text':campus_headlines})\n",
+    "df2['label'] = 0\n",
+    "\n",
+    "\n",
+    "# combine and shuffle \n",
+    "df = pd.concat([df1,df2])\n",
+    "df = df.sample(frac=1).reset_index(drop=True)\n",
     "\n",
     "# Converting all text to lowercase, fixing ampersands and getting rid\n",
     "# of dashes and apostrophes as they can mess up the dictionary\n",
@@ -122,11 +180,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('noodleheadlines.csv')"
+    "df.to_csv('CampusOrNoodle.csv')"
    ]
   },
   {
